# MeliExercise

./: .gitignore  404.html  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
DocumentacionMeliExercise/: mkdocs.yml
DocumentacionMeliExercise/docs/: conclusiones.md  eda.md  features.md  index.md  metricas.md  patron.md
DocumentacionMeliExercise/site/: index.html
DocumentacionMeliExercise/site/eda/: index.html
DocumentacionMeliExercise/site/features/: index.html
DocumentacionMeliExercise/site/metricas/: index.html
DocumentacionMeliExercise/site/patron/: index.html
DocumentacionMeliExercise/site/search/: search_index.json
classes/: data_cleaner.py
conclusiones/: index.html
meliexcercise/: eda.py  new_or_used.py
meliexcercise/classes/: data_cleaner.py  data_loader.py  dataset_builder.py  exploration.py  feature_engineer.py  model_trainer.py
meliexcercise/models/: modelo_xgboost.joblib
modelo/: index.html
